# Bluetooth_project

./: out.txt
.github/workflows/: bsim-tests.yaml  codecov.yaml  coding_guidelines.yml  compliance.yml  devicetree_checks.yml  doc-build.yml  hello_world_multiplatform.yaml  license_check.yml  pylib_tests.yml  release.yml  scorecards.yml  scripts_tests.yml  twister.yaml  twister_tests.yml  west_cmds.yml
samples/bluetooth/peripheral_sc_only/: CMakeLists.txt  IMPLEMENTATION_REPORT.md  KEY_FLOW_TRACKING.md  PHASE3_DOCUMENTATION.md  TrustZone_Overhead_Analysis.csv  prj.conf
samples/bluetooth/peripheral_sc_only/dummy_partition/: BLE_partition.c  CMakeLists.txt  tfm_dummy_partition.yaml
samples/bluetooth/peripheral_sc_only/src/: BLE_partition.c  BLE_partition.h  dummy_partition.c  dummy_partition.h  main.c
samples/tfm_integration/tfm_secure_partition/: prj.conf
samples/tfm_integration/tfm_secure_partition/src/: dummy_partition.c  main.c
subsys/bluetooth/host/: ecc.c  ecc.h  smp.c
